--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 title: Hexo
 subtitle:
 description:
-author: John Doe
+author: LiFan
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.lifan222.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
