--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,37 @@
+# Hexo Configuration
+## Docs: http://hexo.io/docs/configuration.html
+## Source: https://github.com/hexojs/hexo/
+
+# Site
 title: ParaBox
 subtitle: 
 description: 
 author: LiFan
 language: en
-timezone: null
+timezone:
+
+# URL
+## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: /
 root: /
-permalink: ':year/:month/:day/:title/'
-permalink_defaults: null
+permalink: :year/:month/:day/:title/
+permalink_defaults:
+
+# Directory
 source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: ':lang'
-skip_render: null
-new_post_name: ':title.md'
+i18n_dir: :lang
+skip_render:
+
+# Writing
+new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: false
-external_link: true
+titlecase: false # Transform title into titlecase
+external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -29,17 +41,35 @@ highlight:
   enable: true
   line_number: true
   auto_detect: true
-  tab_replace: null
+  tab_replace:
+
+# Category & Tag
 default_category: uncategorized
-category_map: null
-tag_map: null
+category_map:
+tag_map:
+
+# Date / Time format
+## Hexo uses Moment.js to parse and display date
+## You can customize the date format as defined in
+## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
-time_format: 'HH:mm:ss'
+time_format: HH:mm:ss
+
+# Pagination
+## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+# Extensions
+## Plugins: http://hexo.io/plugins/
+## Themes: http://hexo.io/themes/
 theme: hueman
+
+# Deployment
+## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: 'http://github.com/lifaninjp/blog'
+  repo: http://github.com/lifaninjp/blog
   branch: gh-pages
-disqus_shortname: parabox
+
+disqus_shortname: lifan222
